--- a/styles/main.css
+++ b/styles/main.css
@@ -496,4 +496,4 @@ li.list-divider-icon span {
     background: #fff;
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.styles.map */
