'删除多余文件'

--- a/styles/main.css
+++ b/styles/main.css
@@ -117,13 +117,13 @@ body {
     width: 100%;
 }
 
-.ui-select {
+/*.ui-select {
     color: #bbb;
 }
 
 .ui-select.active {
     color: #333;
-}
+}*/
 
 .keyboard {
     background: #eee;
