--- a/views/confirm_pay_2.html
+++ b/views/confirm_pay_2.html
@@ -9,7 +9,7 @@
         <li class="">
             <div class="ui-tips ui-tips-success">
                 <div class="text-sm ui-txt-info"> 付款金额</div>
-                <h2 class="text-x2 ui-txt-warning" id="J_money"></h2>
+                <h2 class="text-x2 ui-txt-warning" id="J_money">{{vm.money}}</h2>
             </div>
         </li>
     </ul>
