--- a/views/setPassword.html
+++ b/views/setPassword.html
@@ -6,10 +6,10 @@
     <ul class="ui-list ui-list-text ui-border-b">
         <li class="list-divider">首次绑定银行卡需要设置支付密码</li>
         <li class="">
-            <pay-input type="setPassword"></pay-input>
+            <pay-input setPassword></pay-input>
         </li><li class="list-divider">请再次输入支付密码，以完成帮卡流程</li>
         <li class="">
-             <pay-input type="rePassword"></pay-input>
+             <pay-input rePassword></pay-input>
         </li>
     </ul>
     <div class="ui-btn-wrap">
